Fix uneven CSS sizing for page content

--- a/source/css/includes/_typography.css
+++ b/source/css/includes/_typography.css
@@ -1,10 +1,12 @@
-body {
-  font: 100% / 1.50 var(--type-body);
+html {
+  font-family: var(--type-body);
+  font-size: 100%;
+  line-height: 1.3;
 }
 
   @media (width >= 768px) {
-    body {
-      font: 112.5% / 1.50 var(--type-body);
+    html {
+      font-size: 110%;
     }
   }
 
@@ -33,20 +35,20 @@ h2, .h2 {
   padding:1.82143rem 0;
 }
 h3, .h3 {
-  font-size:1.5rem;
-  padding:1.75rem 0;
+  font-size: 1.5rem;
+  padding: 1.75rem 0;
 }
 h4, .h4 {
   font-size: 1.3rem;
-  padding:1.5rem 0;
+  padding: 1.5rem 0;
 }
 h5, .h5 {
-  font-size:1.1667rem;
-  padding:1.82142rem 0;
+  font-size: 1.1667rem;
+  padding: 1.82142rem 0;
 }
 h6, .h6 {
-  font-size:1rem;
-  padding:1.5rem 0;
+  font-size: 1rem;
+  padding: 1.5rem 0;
 }
 
   @media (width >= 768px) {
@@ -71,10 +73,17 @@ h6, .h6 {
       padding:1.2869rem 0;
     }
     h6, .h6 {
-      font-size:1rem;
+      font-size: 1rem;
       padding:1.25rem 0;
     }
   }
+
+p, .p {
+  font-size: 1rem;
+  font-weight: normal;
+  padding: 0;
+  margin: 0 0 .5em;
+}
 
 address {
   font-style: normal;
